--- a/CMakeLists.txt.in
+++ b/CMakeLists.txt.in
@@ -5,7 +5,7 @@ project(pmicric-download NONE)
 include(ExternalProject)
 ExternalProject_Add(pmicric
   GIT_REPOSITORY    https://github.com/6rayWa1cher/project-micric.git
-  GIT_TAG           feature/lib+pushback
+  GIT_TAG           v0.0.1
   SOURCE_DIR        "${CMAKE_CURRENT_BINARY_DIR}/pmicric-src"
   BINARY_DIR        "${CMAKE_CURRENT_BINARY_DIR}/pmicric-build"
   CONFIGURE_COMMAND ""
